...
                                    <constraint firstAttribute="width" constant="60" id="gEA-Ao-W69"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fne-II-E2B">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="j62-1B-rrv"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
...
                                <rect key="frame" x="0.0" y="162" width="393" height="4"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="cOt-iY-PJk"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstItem="NfV-Kf-1Mc" firstAttribute="top" secondItem="Cf7-i1-Dgs" secondAttribute="top" id="94r-3M-bIi"/>
                            <constraint firstItem="ams-Sy-dM8" firstAttribute="leading" secondItem="cOt-iY-PJk" secondAttribute="leading" id="DFv-e6-Wqe"/>
                            <constraint firstItem="ams-Sy-dM8" firstAttribute="top" secondItem="cOt-iY-PJk" secondAttribute="top" id="JAF-M1-7VI"/>
                            <constraint firstAttribute="bottom" secondItem="NfV-Kf-1Mc" secondAttribute="bottom" id="ZDG-at-EWD"/>
                            <constraint firstAttribute="trailing" secondItem="NfV-Kf-1Mc" secondAttribute="trailing" id="cEq-Gq-XCu"/>
...
                                <connections>
                                    <outlet property="delegate" destination="KqX-1g-nQV" id="rwv-rO-3Zb"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghF-wa-S7D" userLabel="Back Button">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="7wR-Gk-7mH"/>
                                    <constraint firstAttribute="width" constant="48" id="K5c-Ba-bkm"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
